<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="image_disaster">image disaster</string>
    <string name="disaster_name">Disaster Name</string>
    <string name="disaster_time">10 February 2023 20:00 PM</string>
    <string name="image_disaster_type">Disaster Type</string>
    <string name="disaster_name_type">Type Disaster</string>
    <string name="load_location">Load Location…</string>
    <string name="disaster_periode">Look for disasters within a certain period</string>
    <string name="button_start_date">Button Start Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="find_disaster">Find Disaster</string>
    <string name="title">Title</string>
    <string name="empty_title">Tidak ada title</string>
    <string name="status_code_flood_1">Flood Level Unknown - Beware</string>
    <string name="status_code_flood_2">Flood Between 10 To 70 Centimeter</string>
    <string name="status_code_flood_3">Flood Between 71 To 150 Centimeter</string>
    <string name="status_code_flood_4">Flood More than 150 Centimeter</string>
    <string name="status_code_flood_not_valid">Flood is not valid</string>

    <string-array name="data_type_disaster">
        <item>Flood</item>
        <item>Earthquake</item>
        <item>Fire</item>
        <item>Haze</item>
        <item>Wind</item>
        <item>Volcano</item>
    </string-array>

    <integer-array name="data_type_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </integer-array>

</resources>