<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_report_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_disaster" />

        <TextView
            android:id="@+id/item_report_title"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:gravity="start"
            android:textSize="14sp"
            android:text="@string/disaster_name"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/item_report_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/disaster_time"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="start" />

    </LinearLayout>

</androidx.cardview.widget.CardView>